--- a/sign_in.htm
+++ b/sign_in.htm
@@ -189,7 +189,7 @@
                                     <div class="media thumbnail">
                                         <div class="col-xs-12">
                                             <div class="media-body">
-                                                Если вы хотите без промедления приступить к изучению проекта без регистрации, то воспользуйтесь гостевым аккаунтом. Вы сможете добавить регистрационные данные позже.
+                                                Если вы хотите без промедления приступить к изучению проекта, то воспользуйтесь гостевым аккаунтом. Вы сможете добавить регистрационные данные позже.
                                             </div>
                                         </div>
                                     </div>
@@ -199,9 +199,85 @@
                     </ul>
                     <div class="margin-bottom">
                         <button class="btn btn-success btn-block step0" type="submit"><span class="glyphicon glyphicon-flash"></span>Login with guest account</button>
-                        <button class="btn btn-info btn-block" type="submit" data-toggle="modal" data-target="#modal-with-profile"><span class="glyphicon glyphicon-thumbs-up"></span>Login with social account</button>
                     </div>
-                    <hr />
+                    <ul class="breadcrumb">
+                        <li class="active">Or login with</li>
+                    </ul>
+                    <ul class="nav nav-pills nav-stacked providers">
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/google/logo" title="">
+                                <label>Google</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/facebook/logo" title="">
+                                <label>Facebook</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/twitter/logo" title="">
+                                <label>Twitter</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/vk/logo" title="">
+                                <label>Vkontakte</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/github/logo" title="">
+                                <label>GitHub</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/linkedin/logo" title="">
+                                <label>Linkedin</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/dropbox/logo" title="">
+                                <label>Dropbox</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/instagram/logo" title="">
+                                <label>Instagram</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/flickr/logo" title="">
+                                <label>Flickr</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/tumblr/logo" title="">
+                                <label>Tumblr</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/yahoo/logo" title="">
+                                <label>Yahoo</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="https://oauth.io/api/providers/yandex/logo" title="">
+                                <label>Yandex</label>
+                            </a>
+                        </li>
+                    </ul>
+                    <!--<hr />
                     <div id="sign_in-carousel" class="carousel slide" data-interval="false" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="item">
@@ -268,56 +344,7 @@
                                 </form>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal -->
-    <div class="modal fade" id="modal-with-profile" tabindex="-1" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Login with social account</h4>
-                </div>
-                <div class="modal-body">
-                    <ul class="nav nav-pills nav-stacked providers">
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/github/logo" title="">
-                                <label>GitHub</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/google/logo" title="">
-                                <label>Google</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/facebook/logo" title="">
-                                <label>Facebook</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/twitter/logo" title="">
-                                <label>Twitter</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/youtube/logo" title="">
-                                <label>Youtube</label>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span>Cancel</button>
+                    </div>-->
                 </div>
             </div>
         </div>
